fixed footer spacing

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -119,7 +119,7 @@ h6 {
 }
 
 .banner {
-    padding: 100px 0;
+    padding: 0px 0;
     color: #f8f8f8;
     background: url(../img/contact.jpg) no-repeat center center;
     background-size: cover;
@@ -166,7 +166,7 @@ h6 {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 40px 0;
     background-color: #f8f8f8;
 }
 
